# gatecontrol_lora

./: .gitignore  ARCHITECTURE.md  LICENSE  README.md  __init__.py  bootstrap.py  controller.py  data.py  gatecontrol_webui.py  gc_transport.py  gen_racelink_proto_py.py  gen_wled_metadata.py  lora_proto.h  lora_proto_auto.py  pyproject.toml  pyrightconfig.json  racelink_proto.h  racelink_transport.py  racelink_webui.py  standalone_app.py  ui.py
adapters/: __init__.py  ports.py
core/: __init__.py  event_bus.py  events.py  ports.py
docs/: architecture.md  call_flows.md  compatibility_map.md  event_mapping.md  repo_split_map.md  standalone.md  transport_runtime.md  webui_runtime.md
infrastructure/: __init__.py  lora_transport_adapter.py
integrations/: __init__.py
pages/: gatecontrol.html  racelink.html
platform/: __init__.py  flask_adapter.py  ports.py  rh_adapter.py
providers/: __init__.py  mock_provider.py  rotorhazard_provider.py
racelink/: __init__.py  _build_backend.py  _version.py  app.py  racelink_proto_auto.py
repositories/: __init__.py  config_repository.py
scripts/: bump_host_version.py  setup_nmcli_polkit.sh  static_validation.py
state/: __init__.py  store.py
static/: gc.css  gc.js  racelink.css
tests/: test_architecture_imports.py  test_bootstrap_contracts.py  test_bump_host_version.py  test_consumer_docs.py  test_control_service_rl_apply.py  test_controller_persistence.py  test_dispatch_parity.py  test_dispatch_planner.py  test_exception_hygiene.py  test_flags.py  test_gateway_error_classification.py  test_gateway_serial_transport.py  (+44 more)
(+124 files in other folders)
